Booklist add.
